--- a/chotubhiaya.html
+++ b/chotubhiaya.html
@@ -1,7 +1,7 @@
 <html>
     <head>
           
-        <title>chotubhiaya</title>
+        <title>AARYAMAN</title>
             <link rel="stylesheet" href="chotu.css">
     </head>
     <body bgcolor="orange "> 
@@ -49,6 +49,7 @@
 <script>
     alert(onload = "आर्यमन की तरफ से नमस्ते")
 </script>
+
 
 
 
